--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaDebito/_CmbProveedor_CXP.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaDebito/_CmbProveedor_CXP.cshtml
@@ -7,7 +7,7 @@
         settings.Width = Unit.Percentage(100);
         settings.Properties.DropDownWidth = Unit.Percentage(100);
         settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-        settings.CallbackRouteValues = new { Controller = "NotaCredito", Action = "CmbProveedor_CXP", Area = "CuentasPorPagar" };
+        settings.CallbackRouteValues = new { Controller = "NotaDebito", Action = "CmbProveedor_CXP", Area = "CuentasPorPagar" };
         settings.Properties.CallbackPageSize = 15;
         settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
         settings.Properties.TextField = "pe_nombreCompleto";
@@ -22,7 +22,7 @@
         settings.Properties.Columns.Add("pe_nombreCompleto", "Proveedor", 70);
         settings.Properties.FilterMinLength = 3;
     })
-    .BindList(new Core.Erp.Web.Areas.CuentasPorPagar.Controllers.NotaCreditoController().get_list_bajo_demanda, new Core.Erp.Web.Areas.CuentasPorPagar.Controllers.NotaCreditoController().get_info_bajo_demanda)
+    .BindList(new Core.Erp.Web.Areas.CuentasPorPagar.Controllers.NotaDebitoController().get_list_bajo_demanda, new Core.Erp.Web.Areas.CuentasPorPagar.Controllers.NotaDebitoController().get_info_bajo_demanda)
     .Bind(Model.GetType() == typeof(Core.Erp.Info.CuentasPorPagar.cp_nota_DebCre_Info) ? "" : (Model == 0 ? "" : Model));
 
 }
