--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/Nuevo.cshtml
@@ -78,23 +78,7 @@
             <div class="col-md-6">
                 <div class="form-group">
                     <label for="IdProveedor">Beneficiario*</label>
-                    @Html.DevExpress().ComboBoxFor(q => q.IdEntidad, settings =>
-               {
-                   settings.Name = "IdEntidad";
-                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                   settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                   settings.Properties.Columns.Add("IdProveedor", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-                   settings.Properties.Columns.Add("info_persona.pe_nombreCompleto", "Proveedor").Width = System.Web.UI.WebControls.Unit.Percentage(80);
-                   settings.Properties.Columns.Add("info_persona.pe_cedulaRuc", "Cédula").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-                   settings.Properties.CallbackPageSize = 10;
-                   //Campo ID
-                   settings.Properties.ValueField = "IdProveedor";
-                   settings.Properties.ValueType = typeof(int);
-                   settings.Properties.TextField = "info_persona.pe_nombreCompleto";
-                   //Boton para seleccionar ningun registro
-                   settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
-                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-               }).BindList(ViewBag.lst_proveedores).GetHtml()
+                    @Html.Partial("_CmbPersona_OP", Model.IdEntidad)
                     @Html.ValidationMessageFor(q => q.IdEntidad, "", new { @class = "text-danger" })
                 </div>
             </div>
