--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/Nuevo.cshtml
@@ -11,8 +11,6 @@
 @using (Html.BeginForm("Nuevo", "ProcesarRol", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
 
-
-
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
@@ -46,8 +44,6 @@
             </div>
         </div>
     </div>
-
-
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
@@ -59,6 +55,36 @@
 
                 </div>
             </div>
+        </div>
+    </div>
+
+
+    <div id="Tabs" role="tabpanel">
+        <ul class="nav nav-tabs" role="tablist">
+            <li class="active">
+                <a href="#tab_estadisticas" aria-controls="datos" role="tab" data-toggle="tab">Estadistica</a>
+            </li>
+            <li>
+                <a href="#tab_contratos_por_vencer" aria-controls="diario" role="tab" data-toggle="tab">Contratos por vencer</a>
+            </li>
+        </ul>
+        <div class="tab-content" style="padding-top: 20px">
+            <div role="tabpanel" class="tab-pane active" style="margin-left: 1em;" id="tab_estadisticas">
+               
+            </div>
+            <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_contratos_por_vencer">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                @Html.Action("GridViewPartial_contratos_por_vencer", new {Area="RRHH", Controller="Contrato", ViewBag.FechaCorte})
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
         </div>
     </div>
 
