--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaCredito/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaCredito/Index.cshtml
@@ -97,7 +97,7 @@
             </div>
         </div>
         <div class="box-body">
-            @Html.Action("GridViewPartial_nota_credito", new { IdSucursal = Model.IdSucursal, fecha_ini = Model.fecha_ini, fecha_fin = Model.fecha_fin })
+            @Html.Action("GridViewPartial_nota_credito", new { fecha_ini = Model.fecha_ini, fecha_fin = Model.fecha_fin, IdSucursal = Model.IdSucursal })
 
 
         </div>
