--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaDebito/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaDebito/Index.cshtml
@@ -6,7 +6,7 @@
     {
         Response.Redirect("~/Account/Login");
     }
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Layout/_LayoutConsulta.cshtml";
 }
 
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
@@ -98,7 +98,7 @@
             </div>
         </div>
         <div class="box-body">
-            @Html.Action("GridViewPartial_nota_debito", new { fecha_ini = Model.fecha_ini, fecha_fin = Model.fecha_fin, IdSucursal = Model.IdSucursal })
+            @Html.Action("GridViewPartial_nota_debito", new { fecha_ini = Model.fecha_ini, fecha_fin = Model.fecha_fin, IdSucursal = Model.IdSucursal})
 
 
         </div>
