--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaDebito/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaDebito/Nuevo.cshtml
@@ -6,6 +6,13 @@
         Response.Redirect("~/Account/Login");
     }
     Layout = "~/Views/Shared/_Layout.cshtml";
+
+}
+<script src="~/Scripts/ValidacionBotonSubmit.js"></script>
+
+
+@using (Html.BeginForm("Nuevo", "NotaDebito", FormMethod.Post, new { @class = "form", @role = "form" }))
+{
     if (ViewBag.mensaje != null)
     {
         <div class="alert alert-warning alert-dismissible">
@@ -13,155 +20,91 @@
                 <i class="icon fa fa-warning"></i> @ViewBag.mensaje
             </h4>
         </div>
+
     }
-}
-<script src="~/Scripts/ValidacionBotonSubmit.js"></script>
-
-<script>
-    function op_con_saldo() {
-        if (IdProveedor.GetValue() == 0) {
-            alert("Seleccione el proveedor");
-        }
-        else {
-            Buscar_op();
-            GridViewPartial_ordenes_pagos_con_saldo.PerformCallback();
-            $("#op_con_saldo").modal("show");
-        }
-    };
-    function cerrar() {
-        //GridViewPartial_distribuidos.PerformCallback();
-        //GridViewPartial_por_distribuir.PerformCallback();
-        $("#op_con_saldo").modal("hide");
-    };
-
-
-
-    var selectedIDs;
-    function OnBeginCallback(s, e) {
-        //Pass all selected keys to GridView callback action
-        e.customArgs["selectedIDs"] = selectedIDs;
-    }
-    function OnSelectionChanged(s, e) {
-        s.GetSelectedFieldValues("IdOrdenPago", GetSelectedFieldValuesCallback);
-    }
-    function GetSelectedFieldValuesCallback(values) {
-        //Capture all selected keys
-        selectedIDs = values.join(',');
-    }
-
-
-    function seleccionar_op() {
-        var datos = {
-            Ids: selectedIDs
-        }
-        $.ajax({
-            type: 'POST',
-            data: JSON.stringify(datos),
-            url: '@Url.Action("seleccionar_op","NotaDebito", new { Area = "CuentasPorPagar" })',
-            async: false,
-            bDeferRender: true,
-            bProcessing: true,
-            dataType: 'json',
-            contentType: 'application/json; charset=utf-8',
-            success: function (data) {
-
-                $("#myform").submit();
-                GridViewPartial_nota_debito_det.PerformCallback();
-                $("#op_con_saldo").modal("hide");
-
-            },
-            error: function (error) {
-            }
-        });
-    }
-
-</script>
-@using (Html.BeginForm("Nuevo", "NotaDebito", FormMethod.Post, new { @class = "form", @role = "form" }))
-{
-
     @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
     @Html.HiddenFor(q => q.IdCbteCble_Nota)
 
-<div class="row">
-    <div class="col-md-6">
-        <div class="col-md-12">
-            <div class="form-group">
-                <label for="IdSucursal">Sucursal*</label>
-                @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursales, "IdSucursal", "Su_descripcion"), new { @class = "form-control" })
-                @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
+    <div class="row">
+        <div class="col-md-6">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="IdSucursal">Sucursal*</label>
+                    @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursales, "IdSucursal", "Su_descripcion"), new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
+                </div>
             </div>
-        </div>
-        <div class="col-md-11">
-            <div class="form-group">
-                <label for="IdProveedor">Proveedor*</label>
-                @Html.Partial("_CmbProveedor_CXP", Model.IdProveedor)
-                @Html.ValidationMessageFor(q => q.IdProveedor, "", new { @class = "text-danger" })
+            <div class="col-md-11">
+                <div class="form-group">
+                    <label for="IdProveedor">Proveedor*</label>
+                    @Html.Partial("_CmbProveedor_CXP", Model.IdProveedor)
+                    @Html.ValidationMessageFor(q => q.IdProveedor, "", new { @class = "text-danger" })
+                </div>
             </div>
-        </div>
 
-        <div class="col-md-1">
-            <div class="form-group">
-                <label for=""></label>
-                <a type="button" class="btn btn-primary form-control " href="@Url.Action("Nuevo","Proveedor",new { Area = "CuentasPorPagar", IdEmpresa = Model.IdEmpresa },null)" target="_blank">+</a>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-6">
-        <div class="col-md-6">
-            <div class="form-group">
-                <label for="IdOrden_giro_Tipo">Tipo nota*</label>
-                @Html.DropDownListFor(q => q.IdTipoNota, new SelectList(ViewBag.lst_tipo_nota, "Key", "Value"), new { @class = "form-control", @id = "IdTipoNota" })
-                @Html.ValidationMessageFor(q => q.IdTipoNota, "", new { @class = "text-danger" })
-            </div>
-        </div>
-        <div class="col-md-6">
-            <div class="form-group">
-                <label for="cn_fecha">Fecha documentos*</label>
-                <div class="input-group date">
-                    <div class="input-group-addon">
-                        <i class="fa fa-calendar"></i>
-                    </div>
-                    @Html.TextBoxFor(q => q.cn_fecha, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "cn_fecha" })
-                    @Html.ValidationMessageFor(q => q.cn_fecha, "", new { @class = "text-danger" })
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-md-6">
-        <div class="col-md-6">
-            <div class="form-group">
-                <label for="Fecha_contable">Fecha contabilización*</label>
-                <div class="input-group date">
-                    <div class="input-group-addon">
-                        <i class="fa fa-calendar"></i>
-                    </div>
-                    @Html.TextBoxFor(q => q.Fecha_contable, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "Fecha_contable" })
-                    @Html.ValidationMessageFor(q => q.Fecha_contable, "", new { @class = "text-danger" })
+            <div class="col-md-1">
+                <div class="form-group">
+                    <label for=""></label>
+                    <a type="button" class="btn btn-primary form-control " href="@Url.Action("Nuevo","Proveedor",new { Area = "CuentasPorPagar", IdEmpresa = Model.IdEmpresa },null)" target="_blank">+</a>
                 </div>
             </div>
         </div>
         <div class="col-md-6">
-            <div class="form-group">
-                <label for="cn_Fecha_vcto">Fecha vencimiento*</label>
-                <div class="input-group date">
-                    <div class="input-group-addon">
-                        <i class="fa fa-calendar"></i>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="IdOrden_giro_Tipo">Tipo nota*</label>
+                    @Html.DropDownListFor(q => q.IdTipoNota, new SelectList(ViewBag.lst_tipo_nota, "Key", "Value"), new { @class = "form-control", @id = "IdTipoNota" })
+                    @Html.ValidationMessageFor(q => q.IdTipoNota, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="cn_fecha">Fecha documentos*</label>
+                    <div class="input-group date">
+                        <div class="input-group-addon">
+                            <i class="fa fa-calendar"></i>
+                        </div>
+                        @Html.TextBoxFor(q => q.cn_fecha, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "cn_fecha" })
+                        @Html.ValidationMessageFor(q => q.cn_fecha, "", new { @class = "text-danger" })
                     </div>
-                    @Html.DevExpress().DateEditFor(q=> q.cn_Fecha_vcto, settings =>
-                {
-                    settings.Name = "cn_Fecha_vcto";
-                    settings.Properties.UseMaskBehavior = true;
-                    settings.Properties.EditFormat = EditFormat.Date;
-                    settings.Properties.EditFormatString = "dd/MM/yyyy";
-                    settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
-                    settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                }).GetHtml() 
-                    @Html.ValidationMessageFor(q => q.cn_Fecha_vcto, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="Fecha_contable">Fecha contabilización*</label>
+                    <div class="input-group date">
+                        <div class="input-group-addon">
+                            <i class="fa fa-calendar"></i>
+                        </div>
+                        @Html.TextBoxFor(q => q.Fecha_contable, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "Fecha_contable" })
+                        @Html.ValidationMessageFor(q => q.Fecha_contable, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="cn_Fecha_vcto">Fecha vencimiento*</label>
+                    <div class="input-group date">
+                        <div class="input-group-addon">
+                            <i class="fa fa-calendar"></i>
+                        </div>
+                        @Html.DevExpress().DateEditFor(q=> q.cn_Fecha_vcto, settings =>
+                    {
+                        settings.Name = "cn_Fecha_vcto";
+                        settings.Properties.UseMaskBehavior = true;
+                        settings.Properties.EditFormat = EditFormat.Date;
+                        settings.Properties.EditFormatString = "dd/MM/yyyy";
+                        settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                    }).GetHtml()
+                        @Html.ValidationMessageFor(q => q.cn_Fecha_vcto, "", new { @class = "text-danger" })
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
 
 
@@ -308,23 +251,6 @@
 
                 </div>
 
-                <div class="row">
-                    <div class="col-md-12">
-
-                        <div class="col-md-12">
-                            <div class="form-group">
-
-                                <button type="button" class="btn btn-primary" onclick="op_con_saldo()">
-                                    <i class="fa fa-search"></i>
-                                </button>
-                                @Html.Action("GridViewPartial_nota_debito_det")
-
-
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
             </div>
             <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_informacion_pago">
                 <div class="row">
@@ -373,33 +299,10 @@
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
     }
-    }
+}
 
-    <div class="modal fade" id="op_con_saldo" role="dialog">
-        <div class="modal-dialog modal-lg">
-            <!-- Modal content-->
-            <div class="modal-content">
-
-                <div class="modal-header">
-                    <h4 class="modal-title">Ordenes de pago con aldos</h4>
-                </div>
-                <div class="modal-body">
-                    @Html.Action("GridViewPartial_ordenes_pagos_con_saldo")
-
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" onclick="seleccionar_op();">Aceptar</button>
-                    <button type="button" class="btn btn-default" onclick="cerrar();">Close</button>
-                </div>
-            </div>
-
-        </div>
-    </div>
-
-
-
-    <script>
-
+<script>
+        ocultar_mostrar_div();
 
                     $(function () {
                         //Date picker
@@ -568,32 +471,5 @@
 
 
 
-                    function Buscar_op() {
 
-                        var datos = {
-                            IdProveedor: IdProveedor.GetValue(),
-                            IdEmpresa: $("#IdEmpresa").val()
-
-
-                        }
-                        $.ajax({
-                            type: 'POST',
-                            data: JSON.stringify(datos),
-                            url: '@Url.Action("Buscar_op", "NotaDebito", new { Area = "CuentasPorPagar" })',
-                            async: false,
-                            bDeferRender: true,
-                            bProcessing: true,
-                            dataType: 'json',
-                            contentType: 'application/json; charset=utf-8',
-                            success: function (data) {
-                                GridViewPartial_ordenes_pagos_con_saldo.PerformCallback();
-
-                            },
-                            error: function (error) {
-                            }
-                        });
-
-                    };
-
-
-    </script>
+</script>
