--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaDebito/_GridViewPartial_nota_debito.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/NotaDebito/_GridViewPartial_nota_debito.cshtml
@@ -4,7 +4,7 @@
     var grid = Html.DevExpress().GridView(settings =>
     {
         settings.Name = "GridView_nota_debito";
-        settings.CallbackRouteValues = new { Controller = "NotaDebito", Action = "GridViewPartial_nota_debito" };
+        settings.CallbackRouteValues = new { Controller = "NotaDebito", Action = "GridViewPartial_nota_debito", fecha_ini = ViewBag.fecha_ini, fecha_fin = ViewBag.fecha_fin, IdSucursal = ViewBag.IdSucursal };
         //Configuración para que la grilla no muestre texto completo
         settings.SettingsBehavior.AllowEllipsisInText = true;
         settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
